--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper normal">
     <h1 class="center">
-        Download VISUALZ v2.2.5<br>
+        Download VISUALZ<br>
         Free for Non-Commercial Use<br>
         🔥 Deal Still Going But Ends Soon - Get VISUALZ 50% Off - That's just $24 🔥<br>
     </h1>
@@ -24,7 +24,7 @@
 
     <div class="bordered">
         <img class="mac" src="../../assets/images/macos.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.5/Visualz-2.2.5-x64.dmg"
+        <a href=""
             target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
             Download for Mac
         </a>
@@ -65,7 +65,7 @@
 
     <div class="bordered">
         <img class="windows" src="../../assets/images/windows.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.5/Visualz-Setup-2.2.5.exe"
+        <a href=""
             mat-raised-button class="pink button" target="_blank" (click)="downloadWindows()">
             Download for Windows
         </a>
